--- a/views/pledge_pledge_views.xml
+++ b/views/pledge_pledge_views.xml
@@ -26,6 +26,7 @@
                     <field name="bid_ref" attrs="{'readonly': [('status', '!=', 'draft')],'invisible':[('lca_type', '!=', 'bid bond')]}"/>
                     <field name="payment_method" attrs="{'invisible': [('lca_type', '=', 'bid bond')],'readonly': [('status', '!=', 'draft')]}" />
                     <field name="issuing_bank_name" attrs="{'invisible': [('payment_method', '=', 'cash')],'readonly': [('status', '!=', 'draft')]}"  />
+                    <field name="benefeciary_bank"/>
                     <field name="currency_id"/>
                     <field name="amount" class="oe_inline" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('status', '!=', 'draft')]}"/>
                     <field name="paid_amount" class="oe_inline" widget="monetary" options="{'currency_field': 'currency_id'}" />
